Fixed index page on mobile

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -296,7 +296,15 @@ p
       min-width: 90%
   .rouge-code
     padding: 1rem 0 1rem 0
+    padding-top: 2rem;
   .rouge-gutter.gl
     pre
       color: #272822
       margin-right: 1.3rem
+  .oss
+    .flex
+      .vw30
+        display: none
+
+  .contacts-box
+    padding: 0 1rem
