--- a/source/stylesheets/index.css.sass
+++ b/source/stylesheets/index.css.sass
@@ -97,3 +97,9 @@
   .splash-container
     background: $color-blue
     min-height: 50vh
+
+  .logo-place
+    display: none
+
+  .splash
+    border: 0
